# KaggleDance

./: LICENSE  NOTICE  README.md  READMEJP.md  agent-payment.json  agent.json  llms.txt  pyproject.toml
data/sample/: schema.json  test.csv  train.csv
src/autokaggler/: agent.py  kaggle_submit.py  nvidia_adapter.py  pipeline.py  reporting.py
tests/: test_pipeline.py
